<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Detail">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/img_main"
            android:layout_width="125dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            tools:src="@drawable/nointernet" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="@string/name" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/location" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="Rating" />
                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/rating" />

                <TextView
                    android:id="@+id/textview1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="Kategori" />

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/category" />
            </LinearLayout>

    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/photos"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img1"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/textie4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img1"
                    android:layout_centerHorizontal="true"
                    tools:text="@string/name_img1" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img2"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="3dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/textiew4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img2"
                    android:layout_centerHorizontal="true"
                    tools:text="@string/name_img2" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img3"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="3dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:id="@+id/texti4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img3"
                    android:layout_centerHorizontal="true"
                    tools:text="@string/name_img3" />
            </RelativeLayout>

    </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/nama1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="Tag"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tag1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nama1"
                    android:layout_marginRight="10dp"
                    android:background="@color/darkGrey"
                    android:padding="3dp"
                    tools:text="@string/tag1"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tag2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nama1"
                    android:layout_marginRight="10dp"
                    android:layout_toEndOf="@id/tag1"
                    android:background="@color/darkGrey"
                    android:padding="3dp"
                    tools:text="@string/tag2"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tag3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nama1"
                    android:layout_marginRight="10dp"
                    android:layout_toEndOf="@id/tag2"
                    android:background="@color/darkGrey"
                    android:padding="3dp"
                    tools:text="@string/tag3"
                    android:textColor="@color/black" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/judul"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/name"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/judul"
                        tools:text="@string/content" />

                </RelativeLayout>

            </LinearLayout>

    </LinearLayout>
</ScrollView>